# OCPP

./: .dockerignore  .gitignore  CRITIQUE.md  Cargo.toml  Dockerfile  Makefile  README.md  REVIEW.md  docker-compose.yml  gateway.docker.yaml  gateway.yaml  walkthrough.md
crates/ocpp-adapter/: Cargo.toml
crates/ocpp-adapter/src/: charge_point.rs  connectivity.rs  device.rs  events.rs  handler.rs  lib.rs  metadata.rs  outbound.rs  transaction.rs
crates/ocpp-gateway/: Cargo.toml  gateway.example.yaml
crates/ocpp-gateway/src/: config.rs  main.rs  supervisor.rs
crates/ocpp-internal-grpc/: Cargo.toml  build.rs
crates/ocpp-internal-grpc/proto/: battery_bus.proto
crates/ocpp-internal-grpc/src/: lib.rs
crates/ocpp-internal-mqtt/: Cargo.toml
crates/ocpp-internal-mqtt/src/: lib.rs
crates/ocpp-protocol/: Cargo.toml
crates/ocpp-protocol/src/: action.rs  enums.rs  error.rs  frame.rs  lib.rs  version.rs
crates/ocpp-protocol/src/messages/: authorize.rs  boot_notification.rs  cancel_reservation.rs  change_availability.rs  change_configuration.rs  clear_cache.rs  clear_charging_profile.rs  data_transfer.rs  diagnostics_status_notification.rs  firmware_status_notification.rs  get_composite_schedule.rs  get_configuration.rs  get_diagnostics.rs  get_local_list_version.rs  heartbeat.rs  meter_values.rs  mod.rs  remote_start_transaction.rs  remote_stop_transaction.rs  reserve_now.rs  reset.rs  send_local_list.rs  set_charging_profile.rs  start_transaction.rs  status_notification.rs  stop_transaction.rs  trigger_message.rs  unlock_connector.rs  update_firmware.rs
crates/ocpp-protocol/tests/: ocpp_16j_schema_compat.rs
crates/ocpp-store/: Cargo.toml
crates/ocpp-store/src/: auth.rs  config.rs  lib.rs  profiles.rs  queue.rs  reservations.rs  state.rs
crates/ocpp-transport/: Cargo.toml
crates/ocpp-transport/src/: backoff.rs  correlator.rs  dispatcher.rs  error.rs  lib.rs  session.rs  tls.rs  ws_client.rs
crates/ocpp-transport/tests/: steve_e2e.rs
docs/: BATTERY_BUFFERED_CHARGER_ARCHITECTURE.md  STEVE_COMPATIBILITY.md
scripts/: demo.sh  steve-e2e.sh
