[package]
name = "ocpp-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocpp-protocol.workspace = true
ocpp-transport.workspace = true
ocpp-store.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true

thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
