[package]
name = "ocpp-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ocpp-gateway"
path = "src/main.rs"

[dependencies]
ocpp-protocol.workspace = true
ocpp-transport.workspace = true
ocpp-store.workspace = true
ocpp-adapter.workspace = true
ocpp-internal-mqtt.workspace = true
ocpp-internal-grpc.workspace = true

tokio.workspace = true
async-trait.workspace = true
tonic.workspace = true

serde.workspace = true
serde_json.workspace = true
config.workspace = true
url.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
