[package]
name = "ocpp-internal-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocpp-adapter.workspace = true

tokio.workspace = true
async-trait.workspace = true
tonic.workspace = true
prost.workspace = true
futures.workspace = true
tokio-stream = "0.1"

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build = "0.12"
