[package]
name = "ocpp-internal-mqtt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocpp-adapter.workspace = true

tokio.workspace = true
async-trait.workspace = true
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
