[package]
name = "ocpp-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
ocpp-protocol.workspace = true

[dev-dependencies]
tempfile = "3"
