[package]
name = "ocpp-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ocpp-protocol.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
url.workspace = true
http.workspace = true
base64.workspace = true

rustls.workspace = true
rustls-pemfile.workspace = true
rustls-native-certs.workspace = true

uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
chrono.workspace = true
